--- a/.github/workflows/deployProd.yaml
+++ b/.github/workflows/deployProd.yaml
@@ -42,6 +42,9 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
