--- a/.github/workflows/deployProd.yaml
+++ b/.github/workflows/deployProd.yaml
@@ -25,6 +25,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Disable Jekyll
+        run: touch docs/.nojekyll
+
       - name: Commit docs folder
         run: |
           git config --global user.name 'github-actions[bot]'
