--- a/.github/workflows/deployProd.yaml
+++ b/.github/workflows/deployProd.yaml
@@ -1,4 +1,3 @@
-# .github/workflows/deploy.yml
 name: Deploy to GitHub Pages
 
 on:
@@ -7,14 +6,14 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Node
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -22,16 +21,21 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build
+      - name: Build Vue app
         run: npm run build
 
-      - name: Disable Jekyll
-        run: touch docs/.nojekyll
+      - name: Add .nojekyll
+        run: touch dist/.nojekyll
 
-      - name: Commit docs folder
+      - name: Deploy to gh-pages branch
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add docs
-          git commit -m 'Auto-build docs' || echo "No changes to commit"
-          git push
+
+          # Move to temp folder and init git
+          cd dist
+          git init
+          git add .
+          git commit -m "Deploy from GitHub Actions"
+          git branch -M gh-pages
+          git push -f https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} gh-pages
